Bug 821475 - Moz2D: Remove flip when drawing gradient. r=mstange, a=lsblakk

We muck with the matrix before we draw the text. We need to set it back after.